<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/menu_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_table"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/table"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/menu_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/menu_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_contact_us"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/menu_developers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_about_us"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/about_developers"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
        <TextView
            android:id="@+id/menu_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_settings"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/menu_settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/menu_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>

</ScrollView>