<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPasswordActivity"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp">


    <TextView
        android:id="@+id/ForgotPassword_tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:id="@+id/ForgotPassword_tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/forgot_password_sub_title"
        android:layout_below="@+id/ForgotPassword_tv_forgot_password"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_14ssp" />

    <EditText
        android:id="@+id/ForgotPassword_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/custom_bg_et"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:layout_below="@+id/ForgotPassword_tv_sub_title"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ForgotPassword_btn_sing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/custom_bg_btn"
        android:layout_below="@+id/ForgotPassword_et_email"
        android:fontFamily="@font/open_sans_semibold"
        android:onClick="ForgotPassword_btn_reset_password"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />
</RelativeLayout>