<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RegisterActivity">


    <TextView
        android:id="@+id/Register_tv_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp" />

    <ScrollView
        android:id="@+id/Register_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Register_tv_create_account">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/Register_et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/custom_bg_et"
                    android:hint="@string/full_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/Register_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_bg_et"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/Register_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_bg_et"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

                <EditText
                    android:id="@+id/Register_et_national_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_bg_et"
                    android:hint="@string/national_id"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/Register_et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_bg_et"
                        android:hint="@string/phone"

                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/Register_et_birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_bg_et"
                        android:hint="@string/birthdate"
                        android:importantForAutofill="no"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="date"
                        android:lines="1"
                        android:maxLines="1" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/Register_et_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_bg_et"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:focusable="false"
                        android:hint="@string/state"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        tools:ignore="KeyboardInaccessibleWidget" />

                    <EditText
                        android:id="@+id/Register_et_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_bg_et"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"

                        android:focusable="false"
                        android:hint="@string/gender"
                        android:importantForAutofill="no"

                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/Register_et_academic_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_bg_et"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:focusable="false"
                        android:hint="@string/academic_year"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/Register_et_department"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_bg_et"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:focusable="false"
                        android:hint="@string/department"
                        android:importantForAutofill="no"

                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Register_btn_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/custom_bg_btn"
                    android:fontFamily="@font/open_sans_semibold"
                    android:onClick="Register_btn_sing_up"
                    android:text="@string/sing_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center_vertical|center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="center"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/alpha_gray"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/login_tv_sing_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="center"
                        android:onClick="go_to_sing_in"
                        android:text="@string/sing_in"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
    <com.github.loadingview.LoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        app:lv_duration="15"
        app:lv_end_color="@color/color_end_btn"
        app:lv_external_radius="28dp"
        app:lv_internal_radius="6dp"
        android:background="@color/dark_alpha_50"
        app:lv_start_color="@color/color_start_btn"
        />
</RelativeLayout>