<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".ui.LoginActivity">


    <ScrollView
        android:id="@+id/login_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20sdp"
            tools:ignore="UselessParent"

            >



            <ImageView

                android:id="@+id/e_learning_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_230sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop"
                android:src="@drawable/online_course"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/e_learning_iv"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="-50dp"

                android:background="@drawable/custom_login_card"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_28ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/login_to_your_account"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_16ssp" />

                <EditText
                    android:id="@+id/login_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/custom_bg_et"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/custom_bg_et"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:textAlignment="viewStart"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/login"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="@dimen/_16ssp"
                    android:onClick="login_btn_On_Click"
                    android:background="@drawable/custom_bg_btn"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    />


                <TextView
                    android:id="@+id/login_tv_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:text="@string/forget_password"
                    android:textColor="@color/dark_gray"
                    android:onClick="go_to_forgot_password"
                    android:visibility="invisible"
                    android:textSize="@dimen/_14ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center_vertical|center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="center"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/alpha_gray"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/login_tv_sing_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="center"
                        android:text="@string/sing_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12ssp"
                        android:onClick="go_to_sing_up"/>

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
    <com.github.loadingview.LoadingView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        app:lv_duration="15"
        app:lv_end_color="@color/color_end_btn"
        app:lv_external_radius="28dp"
        app:lv_internal_radius="6dp"
        android:background="@color/dark_alpha_50"
        app:lv_start_color="@color/color_start_btn"
        />
</RelativeLayout>